third_party/blink/web_tests/external/wpt/media-capabilities/idlharness.any-expected.txt
This is a testharness.js-based test.
PASS idlharness
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface WorkerNavigator: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface Screen: original interface defined assert_true: Original interface should be defined expected true got false
PASS MediaCapabilities interface: existence and properties of interface object
PASS MediaCapabilities interface object length
PASS MediaCapabilities interface object name
PASS MediaCapabilities interface: existence and properties of interface prototype object
PASS MediaCapabilities interface: existence and properties of interface prototype object's "constructor" property
PASS MediaCapabilities interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaCapabilities interface: operation decodingInfo(MediaDecodingConfiguration)
PASS MediaCapabilities interface: operation encodingInfo(MediaEncodingConfiguration)
FAIL ScreenLuminance interface: existence and properties of interface object assert_own_property: self does not have own property "ScreenLuminance" expected property "ScreenLuminance" missing
FAIL ScreenLuminance interface object length assert_own_property: self does not have own property "ScreenLuminance" expected property "ScreenLuminance" missing
FAIL ScreenLuminance interface object name assert_own_property: self does not have own property "ScreenLuminance" expected property "ScreenLuminance" missing
FAIL ScreenLuminance interface: existence and properties of interface prototype object assert_own_property: self does not have own property "ScreenLuminance" expected property "ScreenLuminance" missing
FAIL ScreenLuminance interface: existence and properties of interface prototype object's "constructor" property assert_own_property: self does not have own property "ScreenLuminance" expected property "ScreenLuminance" missing
FAIL ScreenLuminance interface: existence and properties of interface prototype object's @@unscopables property assert_own_property: self does not have own property "ScreenLuminance" expected property "ScreenLuminance" missing
FAIL ScreenLuminance interface: attribute min assert_own_property: self does not have own property "ScreenLuminance" expected property "ScreenLuminance" missing
FAIL ScreenLuminance interface: attribute max assert_own_property: self does not have own property "ScreenLuminance" expected property "ScreenLuminance" missing
FAIL ScreenLuminance interface: attribute maxAverage assert_own_property: self does not have own property "ScreenLuminance" expected property "ScreenLuminance" missing
Harness: the test ran to completion.

